@@ -1,4 +1,4 @@
-# vnStat 2.6 config file
+# vnStat 2.7 config file
 ##
 
 # default interface (leave empty for automatic selection)
@@ -170,6 +170,9 @@ SummaryRate 1
 
 # transparent background (1 = enabled, 0 = disabled)
 TransparentBg 0
+
+# image scale (percent)
+ImageScale 100
 
 # image colors
 CBackground     "FFFFFF"
