@@ -425,6 +425,10 @@ Formatting of date in header. Uses the same format as
 Show hours with rate instead of transferred amount. 1 = enabled, 0 = disabled.
 
 .TP
+.B ImageScale
+Scale output to given percent. Value range: 50..500
+
+.TP
 .B SummaryRate
 Show rate in summary output if available. 1 = enabled, 0 = disabled.
 
