@@ -70,6 +70,7 @@ int loadcfg(const char *cfgfile)
 		 {"HourlyRate", 0, &cfg.hourlyrate, 0, 0},
 		 {"SummaryRate", 0, &cfg.summaryrate, 0, 0},
 		 {"TransparentBg", 0, &cfg.transbg, 0, 0},
+		 {"ImageScale", 0, &cfg.imagescale, 0, 0},
 		 {"CBackground", cfg.cbg, 0, 8, 0},
 		 {"CEdge", cfg.cedge, 0, 8, 0},
 		 {"CHeader", cfg.cheader, 0, 8, 0},
@@ -195,6 +196,7 @@ void validatecfg(void)
 	validatebool("DatabaseWriteAheadLogging", &cfg.waldb, WALDB);
 	validateint("DatabaseSynchronous", &cfg.dbsynchronous, DBSYNCHRONOUS, -1, 3);
 	validatebool("TransparentBg", &cfg.transbg, TRANSBG);
+	validateint("ImageScale", &cfg.imagescale, IMAGESCALE, 50, 500);
 	validatebool("HourlyRate", &cfg.hourlyrate, HOURLYRATE);
 	validatebool("SummaryRate", &cfg.summaryrate, SUMMARYRATE);
 	validatebool("TrafficlessEntries", &cfg.trafficlessentries, TRAFFICLESSENTRIES);
@@ -347,6 +349,7 @@ void defaultcfg(void)
 	cfg.dbsynchronous = DBSYNCHRONOUS;
 
 	cfg.transbg = TRANSBG;
+	cfg.imagescale = IMAGESCALE;
 	strncpy_nt(cfg.cbg, CBACKGROUND, 8);
 	strncpy_nt(cfg.cedge, CEDGE, 8);
 	strncpy_nt(cfg.cheader, CHEADER, 8);
